@@ -2,10 +2,14 @@ Release History
 ***************
 
 
+
+
 1.0a4 (??)
 ----------
 - using decorators for setting user used for command
 - cleaned up user adding code. renamed to setupusers
+- BUG: two hostout parts with different extends= values won't create two seperate command stacks
+  but instead one combined one
 
 1.0a3 (??)
 ----------
